--- a/src/app/pages/payroll/masters/empPayband/empPayband.html
+++ b/src/app/pages/payroll/masters/empPayband/empPayband.html
@@ -42,7 +42,7 @@
             <div class="col-md-12" ng-show="gridShow">
                 <div class="row">
                     <div id="djGrid1" ui-grid="page.gridOptions" ui-grid-cellNav ui-grid-edit ui-grid-auto-resize ui-grid-pagination ui-grid-selection
-                        ui-grid-expandable class="djGrid">
+                        ui-grid-expandable class="djGrid payband">
                     </div>
                 </div>
             </div>
