--- a/src/app/pages/payroll/masters/common/list/mastersList.html
+++ b/src/app/pages/payroll/masters/common/list/mastersList.html
@@ -90,32 +90,21 @@
                     <h3 class="">Salary Calculated On (For Day Based Salary) </h3>
                     <hr>
                     <div class="row">
-                        <!--<div class="form-group col-md-3">
-                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
-                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalDayInCycle" ng-entity="entity" form="editForm"></field-box>
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
-                            <field-box page="page" ng-column="page.pageinfo.fields.LSCTotalWorkingDay" ng-entity="entity" form="editForm"></field-box>
-                        </div>
-                        <div class="form-group col-md-3">
-                            <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
-                            <field-box page="page" ng-column="page.pageinfo.fields.LSCFixDay" ng-entity="entity" form="editForm"></field-box>
-                        </div>-->
+                      
 
                         <div class="form-group col-md-6">
                             <label class="radio-inline custom-radio nowrap font-bold">
-                                <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
+                                <input type="radio" name="salaryCalculatedOn" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
                                     ng-model="entity.salaryCalOn" value="1">
                                 <span>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</span>
                             </label>
                             <label class="radio-inline custom-radio nowrap font-bold">
-                                <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
+                                <input type="radio" name="salaryCalculatedOn" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
                                     ng-model="entity.salaryCalOn" value="2">
                                 <span>{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</span>
                             </label>
                             <label class="radio-inline custom-radio nowrap font-bold">
-                                <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
+                                <input type="radio" name="salaryCalculatedOn" ng-click="fixedDays=true;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)"
                                     ng-model="entity.salaryCalOn" value="3">
                                 <span>{{page.pageinfo.fields.LSCFixDay.text}}</span>
                             </label>
