--- a/src/app/pages/organization/employees/templates/address/address-view.html
+++ b/src/app/pages/organization/employees/templates/address/address-view.html
@@ -53,8 +53,8 @@
           </div>
           <div class="col-sm-4">
             <div class="form-group">
-              <label ng-bind="contactPage.pageinfo.fields.CityId.text"></label>
-              <field-box page="page" ng-column="contactPage.pageinfo.fields.CityId" ng-entity="empTabCtrl.empContactDetail" form="editForm"></field-box>
+              <label ng-bind="contactPage.pageinfo.fields.CDCityId.text"></label>
+              <field-box page="page" ng-column="contactPage.pageinfo.fields.CDCityId" ng-entity="empTabCtrl.empContactDetail" form="editForm"></field-box>
 
               <!--<label for="empCmpCity_{{$index}}">City</label>
                 <select id="empCmpCity_{{$index}}" name="empCmpCity_{{$index}}" ng-model="empTabCtrl.empContactDetail.CityId" class="form-control"
