--- a/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
+++ b/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
@@ -86,7 +86,7 @@
                     <div class="row" ng-if="weekGridOptions.data.length>0">
                         <div class="col-md-12">
                             <div id="gridopt" style="height: 200px; " ui-grid="weekGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
-                                ui-grid-auto-resize ui-grid-selection class="grid weekGridOptionss"></div>
+                                ui-grid-auto-resize ui-grid-selection class="grid weekGridOptionss paybandgrid payband"></div>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <div class="row" ng-if="eightyCGridOptions.data.length>0">
                         <div class="col-md-12">
                             <div style="height: 200px;" ui-grid="eightyCGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
-                                ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                                ui-grid-auto-resize ui-grid-selection class="grid paybandgrid payband"></div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <div class="row" ng-if="sixAGridOptions.data.length>0">
                         <div class="col-md-12">
                             <div style="height: 250px;" ui-grid="sixAGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
-                                ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                                ui-grid-auto-resize ui-grid-selection class="grid paybandgrid payband"></div>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <div class="row" ng-if="sevenAGridOptions.data.length>0">
                         <div class="col-md-12">
                             <div style="height: 190px;" ui-grid="sevenAGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
-                                ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                                ui-grid-auto-resize ui-grid-selection class="grid paybandgrid payband"></div>
                         </div>
                     </div>
                 </div>
