--- a/src/app/pages/attendance/shiftmaster/shiftmaster.html
+++ b/src/app/pages/attendance/shiftmaster/shiftmaster.html
@@ -376,7 +376,7 @@
                 </div>
             </div>
 
-            <h3 class="with-line ">Grouping (Shift Rule Apply On Group Of Employee)</h3>
+            <!-- <h3 class="with-line ">Grouping (Shift Rule Apply On Group Of Employee)</h3>
             <div class="row">
                 <div class="form-group col-md-4">
                     <ul style="list-style-type:none" ng-repeat="value in groupList">
@@ -390,7 +390,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
