--- a/src/app/pages/roster/roster/roster.html
+++ b/src/app/pages/roster/roster/roster.html
@@ -17,45 +17,32 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
+                                <label ng-bind="page.pageinfo.fields.RODShiftId.text"></label>
+                                <div>
+                                        <field-box page="page" ng-column="page.pageinfo.fields.RODShiftId" ng-entity="entity" form="editForm"></field-box>
+
+                                </div>
+
+                            </div>
+                            <!-- <div class="col-md-6">
                                 <label ng-bind="page.pageinfo.fields.RODRosterPlanId.text"></label>
                                 <div>
                                     <select class="form-control" ng-model="entity.plan" ng-change="planOnChange(entity.plan)" ng-options="plan.name for plan in page.pageinfo.fields.RODRosterPlanId.options">
                                     </select>
-                                    <!-- <field-box page="page" ng-column="page.pageinfo.fields.RODRosterPlanId" ng-entity="entity" form="editForm" fb-change="planOnChange(entity.RODRosterPlanId)"></field-box> -->
+                                  
                                 </div>
 
-                            </div>
+                            </div> -->
                         </div>
-                        <div ng-show="planDetail">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label ng-bind="page.pageinfo.fields.RODShiftId.text"></label>
-                                    <div>
-                                        <select disabled="disabled" class="form-control" ng-model="entity.RODShiftId" ng-options="shift.value as shift.name for shift in page.pageinfo.fields.RODShiftId.options">
-                                        </select>
-                                        <!-- <field-box page="page" ng-column="page.pageinfo.fields.RODShiftId" ng-entity="entity" form="editForm"></field-box> -->
-                                    </div>
 
-                                </div>
-                                <div class="col-md-6">
-                                    <label ng-bind="page.pageinfo.fields.RODWeekOffSetId.text"></label>
-                                    <div>
-                                        <select disabled="disabled" class="form-control" ng-model="entity.RODWeekOffSetId" ng-options="weekOffSet.value as weekOffSet.name for weekOffSet in page.pageinfo.fields.RODWeekOffSetId.options">
-                                        </select>
-                                        <!-- <field-box page="page" ng-column="page.pageinfo.fields.RODWeekOffSetId" ng-entity="entity" form="editForm"></field-box> -->
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label ng-bind="page.pageinfo.fields.RODFromDate.text"></label>
+                                <!-- <div>
+                                    <span class="form-control" ng-bind="entity.RODFromDate"></span>
+                                </div> -->
 
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <label ng-bind="page.pageinfo.fields.RODFromDate.text"></label>
-                                    <div>
-                                        <span class="form-control" ng-bind="entity.RODFromDate"></span>
-                                    </div>
-
-                                    <!-- <div class="input-group" moment-picker="entity.RODFromDate" format="DD-MMM-YYYY" start-view="month">
+                                <!-- <div class="input-group" moment-picker="entity.RODFromDate" format="DD-MMM-YYYY" start-view="month">
                                         <span class="input-group-addon">
                                             <i class="fa fa-calendar"></i>
                                         </span>
@@ -67,15 +54,15 @@
                                             </button>
                                         </span>
                                     </div> -->
-                                    <!-- <field-box page="page" ng-column="page.pageinfo.fields.RODFromDate" ng-entity="entity" form="editForm"></field-box> -->
+                                <field-box page="page" ng-column="page.pageinfo.fields.RODFromDate" ng-entity="entity" form="editForm"></field-box>
 
-                                </div>
-                                <div class="col-md-6">
-                                    <label ng-bind="page.pageinfo.fields.RODToDate.text"></label>
-                                    <div>
-                                        <span class="form-control" ng-bind="entity.RODToDate"></span>
-                                    </div>
-                                    <!-- <div class="input-group" moment-picker="entity.RODToDate" format="DD-MMM-YYYY" start-view="month">
+                            </div>
+                            <div class="col-md-6">
+                                <label ng-bind="page.pageinfo.fields.RODToDate.text"></label>
+                                <!-- <div>
+                                    <span class="form-control" ng-bind="entity.RODToDate"></span>
+                                </div> -->
+                                <!-- <div class="input-group" moment-picker="entity.RODToDate" format="DD-MMM-YYYY" start-view="month">
                                         <span class="input-group-addon">
                                             <i class="fa fa-calendar"></i>
                                         </span>
@@ -87,11 +74,30 @@
                                             </button>
                                         </span>
                                     </div> -->
-                                    <!-- <div>
-                                        <field-box page="page" ng-column="page.pageinfo.fields.RODToDate" ng-entity="entity" form="editForm"></field-box>
-                                    </div> -->
+                                <div>
+                                    <field-box page="page" ng-column="page.pageinfo.fields.RODToDate" ng-entity="entity" form="editForm"></field-box>
                                 </div>
                             </div>
+
+                            <!-- <div class="col-md-6">
+                                            <label ng-bind="page.pageinfo.fields.RODShiftId.text"></label>
+                                            <div>
+                                                <select disabled="disabled" class="form-control" ng-model="entity.RODShiftId" ng-options="shift.value as shift.name for shift in page.pageinfo.fields.RODShiftId.options">
+                                                </select>
+                                           
+                                            </div>
+        
+                                        </div> -->
+                            <div class="col-md-6">
+                                <label ng-bind="page.pageinfo.fields.RODWeekOffSetId.text"></label>
+                                <div>
+                                    <!-- <select disabled="disabled" class="form-control" ng-model="entity.RODWeekOffSetId" ng-options="weekOffSet.value as weekOffSet.name for weekOffSet in page.pageinfo.fields.RODWeekOffSetId.options">
+                                        </select> -->
+                                    <field-box page="page" ng-column="page.pageinfo.fields.RODWeekOffSetId" ng-entity="entity" form="editForm"></field-box>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
