--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -194,7 +194,7 @@
       </div>
 
     </div>
-    <div class="row">
+    <!-- <div class="row">
 
       <div class="col-sm-4">
         <div class="form-group">
@@ -205,7 +205,7 @@
           </select>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="text-center">
       <button type="submit" class="btn btn-primary">Save</button>
       <button type="button" ng-click="addCtrl.empAdd=[]" class="btn btn-primary">Clear</button>
