--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -59,9 +59,9 @@
                                 <span class="input-group-addon">
                                              <i class="fa fa-calendar"></i>
                                          </span>
-                                <input ng-readonly="true" disabled="disabled" class="form-control" placeholder="Select a date" ng-model="entity.WOSWET" ng-model-options="{ updateOn: 'blur' }">
+                                <input ng-readonly="true" class="form-control" placeholder="Select a date" ng-model="entity.WOSWET" ng-model-options="{ updateOn: 'blur' }">
                                 <span class="input-group-btn">
-                                             <button class="btn btn-secondary" disabled="disabled"  type="button"><i class="fa fa-close"></i></button>
+                                             <button class="btn btn-secondary"   type="button"><i class="fa fa-close"></i></button>
                                          </span>
                             </div>
                             <!-- <field-box page="weekOffSetPage" ng-column="weekOffSetPage.pageinfo.fields.WOSWET" ng-entity="entity" form="editForm" fb-change="appliedDays()"></field-box> -->
